<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_navigation_bar_entrant">
    <!--    ENTRANT TABS-->
    <item
        android:id="@+id/navigation_entranthome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_entranthome" />
    <item
        android:id="@+id/navigation_entrant_profile_display"
        android:icon="@drawable/baseline_account_box_24"
        android:title="@string/title_entrantprofile" />
    <item
        android:id="@+id/navigation_entrantnotifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
</menu>