<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entranthome.EntrantHomeFragment"
    android:background="@drawable/background_gradient">


<!--    <Button-->
<!--        android:id="@+id/view_profile_button"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="48dp"-->
<!--        android:backgroundTint="@color/buttonPurple"-->
<!--        android:text="@string/view_my_profile"-->
<!--        android:textColor="@android:color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/scan_qr_button" />-->


    <View
        android:id="@+id/divider"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/scan_qr_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:backgroundTint="@color/buttonPurple"
        android:text="@string/scan_qr_code"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/view_events_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/buttonPurple"
        android:text="@string/view_events"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_qr_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_shape"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/button_switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Organizer Mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/button_adminn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADMIN MODE"
        android:backgroundTint="@color/adminbg"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_switch2"
        app:layout_constraintVertical_bias="0.097" />


</androidx.constraintlayout.widget.ConstraintLayout>
