<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="barcode_scanner" type="id" />
</resources>